--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     tools:context="com.yotampocoloentendia.verolimp.view.activities.LoginActivity">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/input_layout_user"
+        android:id="@+id/input_layout_mail"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -19,18 +19,19 @@
         android:layout_marginTop="100dp">
 
         <EditText
-            android:id="@+id/input_user"
+            android:id="@+id/input_mail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:hint="@string/hint_user"/>
+            android:inputType="textEmailAddress"
+            android:hint="@string/hint_mail"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_pass"
         android:layout_width="300dp"
-        android:layout_below="@+id/input_layout_user"
+        android:layout_below="@+id/input_layout_mail"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textColorHint="@color/white"
