--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,6 +77,7 @@
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:onClick="onViewClicked"
+        android:clickable="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/register"/>
 
