--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/deepBlue"
-    tools:context="com.yotampocoloentendia.verolimp.view.activities.RegisterActivity">
+    tools:context="com.yotampocoloentendia.verolimp.view.activities.register.RegisterActivity">
 
     <TextView
         android:id="@+id/tvNewUser"
